# SpecGen

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Main.cpp  Makefile  cmake_install.cmake  latexsample.tex  main  main.cpp  report (2).tex  report.tex  report.txt
Data/: spec-report.aux  spec-report.dvi
include/: actuators.h
src/: actuators.cpp
